--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
   <dependencies>
 
     <dependency>
+      <groupId>com.lin.cms</groupId>
+      <artifactId>core</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-jdbc-client</artifactId>
     </dependency>
