--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
     <lombok.version>1.18.10</lombok.version>
     <slf4j.version>1.7.29</slf4j.version>
     <postgresql.version>42.2.9</postgresql.version>
-    <junit-jupiter.version>5.4.0</junit-jupiter.version>
 
     <main.verticle>com.pedro.vertx.MainVerticle</main.verticle>
   </properties>
@@ -66,12 +65,12 @@
 
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-junit5</artifactId>
+      <artifactId>vertx-web</artifactId>
     </dependency>
 
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-web</artifactId>
+      <artifactId>vertx-web-client</artifactId>
     </dependency>
 
     <dependency>
@@ -83,6 +82,12 @@
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>${postgresql.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>cn.hutool</groupId>
+      <artifactId>hutool-core</artifactId>
+      <version>5.0.6</version>
     </dependency>
 
     <dependency>
@@ -111,28 +116,15 @@
     </dependency>
 
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-junit5</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>cn.hutool</groupId>
-      <artifactId>hutool-core</artifactId>
-      <version>5.0.6</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>${junit-jupiter.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>${junit-jupiter.version}</version>
+      <artifactId>vertx-unit</artifactId>
       <scope>test</scope>
     </dependency>
 
