--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,18 @@
     </dependency>
 
     <dependency>
+      <groupId>org.jooq</groupId>
+      <artifactId>jooq</artifactId>
+      <version>3.11.9</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.github.jklingsporn</groupId>
+      <artifactId>vertx-jooq-rx-reactive</artifactId>
+      <version>5.0.1</version>
+    </dependency>
+
+    <dependency>
       <groupId>cn.hutool</groupId>
       <artifactId>hutool-core</artifactId>
       <version>5.0.6</version>
@@ -203,6 +215,65 @@
             <argument>run</argument>
             <argument>${main.verticle}</argument>
           </arguments>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.jooq</groupId>
+        <artifactId>jooq-codegen-maven</artifactId>
+        <version>3.11.9</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.10</version>
+          </dependency>
+          <dependency>
+            <groupId>io.github.jklingsporn</groupId>
+            <artifactId>vertx-jooq-generate</artifactId>
+            <version>5.0.1</version>
+          </dependency>
+        </dependencies>
+
+        <configuration>
+          <jdbc>
+            <driver>org.postgresql.Driver</driver>
+            <url>jdbc:postgresql://127.0.0.1:5432/imooc</url>
+            <user>pedro</user>
+            <password></password>
+          </jdbc>
+
+          <generator>
+            <name>io.github.jklingsporn.vertx.jooq.generate.rx.RXReactiveVertxGenerator</name>
+            <database>
+              <name>org.jooq.meta.postgres.PostgresDatabase</name>
+              <includes>article | blog_user</includes>
+              <!-- <excludes>imooc.* | jieba.* | .*seq |</excludes>-->
+              <inputSchema>public</inputSchema>
+              <unsignedTypes>false</unsignedTypes>
+            </database>
+            <target>
+              <packageName>com.pedro.vertx.database.gen</packageName>
+              <directory>src/main/java</directory>
+            </target>
+            <generate>
+              <interfaces>true</interfaces>
+              <daos>true</daos>
+              <fluentSetters>true</fluentSetters>
+            </generate>
+
+            <strategy>
+              <name>io.github.jklingsporn.vertx.jooq.generate.VertxGeneratorStrategy</name>
+            </strategy>
+          </generator>
+
         </configuration>
       </plugin>
 
